--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/HarshavardhanK/ThePostBackend#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "crypto-js": "^3.1.9-1",
     "deasync": "^0.1.15",
     "express": "^4.16.4",
+    "get-urls": "^9.1.0",
     "mongodb": "^3.2.4",
-    "puppeteer": "^1.16.0"
+    "puppeteer": "^1.16.0",
+    "striptags": "^3.1.1"
   }
 }
