--- a/api.themitpost.conf
+++ b/api.themitpost.conf
@@ -55,6 +55,13 @@ server {
 	#
 	# include snippets/snakeoil.conf;
 
+	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+	ssl_prefer_server_ciphers on;
+	ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
+	ssl_session_cache shared:SSL:5m;
+	ssl_session_timeout 1h;
+	add_header Strict-Transport-Security “max-age=15768000” always;
+
 	root /home/ubuntu/public_html;
 
 	# Add index.php to the list if you are using PHP
