--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "body-parser": "^1.19.0",
     "crypto-js": "^3.1.9-1",
     "deasync": "^0.1.15",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "get-urls": "^9.1.0",
-    "mongodb": "^3.2.4",
+    "mongodb": "^3.2.7",
     "nodemon": "^1.19.1",
-    "puppeteer": "^1.16.0",
+    "pug": "^2.0.4",
+    "puppeteer": "^1.19.0",
     "striptags": "^3.1.1",
-    "yargs": "^13.2.4"
+    "yargs": "^13.3.0"
   }
 }
