--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "crypto-js": "^3.1.9-1",
     "deasync": "^0.1.15",
     "express": "^4.17.1",
+    "firebase-admin": "^8.5.0",
     "get-urls": "^9.1.0",
     "mongodb": "^3.2.7",
     "nodemon": "^1.19.2",
