--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "crypto-js": "^3.1.9-1",
     "deasync": "^0.1.15",
     "express": "^4.17.1",
+    "fcm-node": "^1.5.2",
     "firebase-admin": "^8.5.0",
     "get-urls": "^9.1.0",
     "mongodb": "^3.2.7",
     "nodemon": "^1.19.2",
     "pug": "^2.0.4",
     "puppeteer": "^1.20.0",
+    "request": "^2.88.0",
     "striptags": "^3.1.1",
     "yargs": "^13.3.0"
   }
