--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "fcm-node": "^1.5.2",
     "firebase-admin": "^8.5.0",
+    "get-json": "^1.0.1",
     "get-urls": "^9.1.0",
     "mongodb": "^3.2.7",
     "nodemon": "^1.19.2",
